06-minio/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio-api
  namespace: minio
spec:
  entryPoints:
    - minio
  routes:
#   - match: HostSNI(`*`)
    - match: Host(`minio.apps.gamehost.fi`)
      kind: Rule
      services:
      - name: minio
        port: 9000
  tls:
    secretName: tls-gamehost
#   passthrough: false
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio-console
  namespace: minio
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`minio.apps.gamehost.fi`)
      kind: Rule
      services:
        - name: minio
          port: 9001
  tls:
    secretName: tls-gamehost
